--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-    "name": "air-heater-control-system",
-    "version": "0.1.0",
-    "homepage": "https://yourusername.github.io/air-heater-control-system",
-    "private": true,
-    "dependencies": {
-      "@tailwindcss/typography": "^0.5.10",
-      "lucide-react": "^0.263.1",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-scripts": "5.0.1",
-      "tailwindcss": "^3.4.1",
-      "recharts": "^2.10.3"
-    },
-    "scripts": {
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d build",
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    }
+  "name": "air-heater-control-system",
+  "version": "0.1.0",
+  "homepage": "https://yourusername.github.io/air-heater-control-system",
+  "private": true,
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.14.1"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
+}
