--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.14.1"
   },
@@ -20,11 +21,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.2.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "tailwindcss": "^3.4.16"
   },
   "browserslist": {
     "production": [
